charts/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingestion
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
spec:
  rules:
    - http:
        paths:
          - path: /ingestion/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-ingestion-service
                port:
                  number: 8080
          - path: /alerts/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-alerts-service
                port:
                  number: 8080
          - path: /fhir-converter/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-fhir-converter-service
                port:
                  number: 8080
          - path: /message-parser/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-message-parser-service
                port:
                  number: 8080
          - path: /record-linkage/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-record-linkage-service
                port:
                  number: 8080
          - path: /tabulation/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-tabulation-service
                port:
                  number: 8080
          - path: /validation/*
            pathType: Prefix
            backend:
              service:
                name: phdi-{env}-validation-service
                port:
                  number: 8080
